chore: Update link to Pomodoro Technique in index.html

--- a/index.html
+++ b/index.html
@@ -26,7 +26,13 @@
   </head>
   <body>
     <div class="app-container">
-      <h1>Pomodoro</h1>
+      <h1>
+        <a
+          target="_blank"
+          href="https://en.wikipedia.org/wiki/Pomodoro_Technique"
+          >Pomodoro</a
+        >
+      </h1>
       <div class="app-message">
         Press <span class="rainbow-text pacifico-regular">start</span> to begin
       </div>
